fix(demo): fix demo build and link to docs

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
 
       <p>Demo page for SVGuitar. Try to create some SVGs here.</p>
 
-      <a href="/docs/">TypeScript Documentation</a>
+      <a href="./docs">TypeScript Documentation</a>
     </div>
   </div>
   <div class="row">
