fix(demo): fix validation of nut size field

--- a/demo/index.html
+++ b/demo/index.html
@@ -45,27 +45,27 @@
             <label for="chart-title">Title</label>
             <input name="title" type="text" class="form-control" id="chart-title" placeholder="Enter chart title">
           </div>
-          <div>
+          <div class="form-group">
             <label for="chart-strings">Strings</label>
             <input name="strings" type="number" step="1" class="form-control" id="chart-strings" placeholder="Enter strings">
           </div>
-          <div>
+          <div class="form-group">
             <label for="chart-frets">Frets</label>
             <input name="frets" type="number" step="1" class="form-control" id="chart-frets" placeholder="Enter frets">
           </div>
-          <div>
+          <div class="form-group">
             <label for="chart-frets">Position</label>
             <input name="position" type="number" step="1" class="form-control" id="chart-position" placeholder="Enter position">
           </div>
-          <div>
+          <div class="form-group">
             <label for="chart-color">Color</label>
             <input name="color" type="text" class="form-control" id="chart-color" placeholder="Enter chart color">
           </div>
-          <div>
+          <div class="form-group">
             <label for="chart-color">Nut Size</label>
-            <input name="nutSize" type="number" class="form-control" id="nut-size" placeholder="Enter nut size">
+            <input name="nutSize" type="number" step="0.01" class="form-control" id="nut-size" placeholder="Enter nut size">
           </div>
-          <div>
+          <div class="form-group">
             <label for="chart-color">Stroke Width</label>
             <input name="strokeWidth" type="text" class="form-control" id="stroke-width" placeholder="Enter stroke width">
           </div>
